@@ -32,6 +32,7 @@ public slots:
     void showDbStatus();
     void showDialogFolderContents(const QString &folderName, const QList<ExtNumSize> &extList); // view folder contents
     void showFilterCreationDialog(const QString &folderName, const QList<ExtNumSize> &extList); // the same^ dialog, but with filter creation mode enabled
+    void showDialogDbContents(const QString &folderName, const QList<ExtNumSize> &extList); // view DB contents
     void dialogSettings();
     void dialogChooseFolder();
     void dialogOpenJson();
